# psn-etl

./: .gitignore  Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 16c8298d3854_initial_migration.py
psn_etl/: logging_config.py
psn_etl/db/: db.py  models.py
psn_etl/trophies/: etl.py
trophies/: etl.py
